4/Compilers4/bisonfinal.output
Terminals unused in grammar

   COLON
   INTEGER_LITERAL


Grammar

    0 $accept: grammar_start $end

    1 grammar_start: stmtlist

    2 stmtlist: stmt stmtlist
    3         | %empty

    4 stmt: IF LP exprc rp LCP stmtlist RCP elsestmt
    5     | WHILE LP exprc rp LCP stmtlist RCP
    6     | FOR LP exprfor rp LCP stmtlist RCP
    7     | SWITCH LP arithexpr rp switchstmt
    8     | expression semi
    9     | d semi

   10 d: type list_var

   11 type: INT
   12     | CHAR
   13     | FLOAT

   14 list_var: id_arr
   15         | id_arr EQ mathexpr
   16         | id_arr COMMA list_var

   17 id_arr: ID
   18       | ID br_dimlist

   19 br_dimlist: LSP NUM RSP
   20           | br_dimlist LSP NUM RSP

   21 elsestmt: ELSEIF LP exprc rp LCP stmtlist RCP elsestmt
   22         | ELSE LCP stmtlist RCP
   23         | %empty

   24 exprc: exprc OR expression A
   25      | exprc AND expression A
   26      | expression A

   27 A: LT expression
   28  | GT expression
   29  | EQEQ expression
   30  | GT EQ expression
   31  | LT EQ expression
   32  | %empty

   33 switchstmt: CASE LP arithexpr rp LCP stmtlist RCP switchstmt
   34           | DEFAULT LCP stmtlist RCP
   35           | %empty

   36 exprfor: expression semi exprc semi expression

   37 expression: RUN LP func_arg_list rp
   38           | SET_JOB_AFFINITY LP func_arg_list rp
   39           | SET_ALGO LP func_arg_list rp
   40           | DISCARD_JOB LP func_arg_list rp
   41           | WAIT LP func_arg_list rp
   42           | init
   43           | mathexpr

   44 init: id_arr EQ constructor
   45     | %empty

   46 mathexpr: assignexpr
   47         | arithexpr

   48 assignexpr: id_arr EQ mathexpr
   49           | id_arr PLUSEQ mathexpr
   50           | id_arr MINUSEQ mathexpr
   51           | id_arr MULTIPLYEQ mathexpr
   52           | id_arr DIVIDEEQ mathexpr
   53           | id_arr MINUSMINUS
   54           | id_arr PLUSPLUS

   55 arithexpr: expr1 BITAND arithexpr
   56          | expr1

   57 expr1: expr2 BITOR expr1
   58      | expr2

   59 expr2: expr2 PLUS expr3
   60      | expr2 MINUS expr3
   61      | expr3

   62 expr3: expr3 MULTIPLY expr4
   63      | expr3 DIVIDE expr4
   64      | expr4

   65 expr4: NOT factor
   66      | factor

   67 factor: NUM
   68       | id_arr DOT function
   69       | constructor DOT function
   70       | id_arr
   71       | LP arithexpr rp

   72 constructor: PROCESSOR LP proc_parameter_list rp
   73            | LINK LP link_parameter_list rp
   74            | MEMORY LP memory_parameter_list rp
   75            | JOB LP job_parameter_list rp
   76            | CLUSTER LP cluster_parameter_list rp
   77            | SCHEDULER LP scheduler_parameter_list rp

   78 proc_parameter_list: proc_parameter C

   79 C: COMMA proc_parameter_list
   80  | %empty

   81 link_parameter_list: link_parameter D

   82 D: COMMA link_parameter_list
   83  | %empty

   84 memory_parameter_list: memory_parameter E

   85 E: COMMA memory_parameter_list
   86  | %empty

   87 job_parameter_list: job_parameter F

   88 F: COMMA job_parameter_list
   89  | %empty

   90 cluster_parameter_list: cluster_parameter G

   91 G: COMMA cluster_parameter_list
   92  | %empty

   93 scheduler_parameter_list: scheduler_parameter Z

   94 Z: COMMA scheduler_parameter_list
   95  | %empty

   96 proc_parameter: ARCHITECTURE_TYPE EQ value
   97               | ISA EQ value
   98               | CLOCK_SPEED EQ value
   99               | L1_MEMORY EQ value
  100               | L2_MEMORY EQ value
  101               | NAME EQ value
  102               | argument
  103               | %empty

  104 argument: value
  105         | LSP valuearray rsp

  106 valuearray: value H
  107           | %empty

  108 H: COMMA valuearray
  109  | %empty

  110 link_parameter: START_POINT EQ value
  111               | END_POINT EQ value
  112               | BANDWIDTH EQ value
  113               | CHANNEL_CAPACITY EQ value
  114               | NAME EQ value
  115               | value
  116               | %empty

  117 memory_parameter: MEMORY_TYPE EQ value
  118                 | MEM_SIZE EQ value
  119                 | NAME EQ value
  120                 | value
  121                 | %empty

  122 job_parameter: JOB_ID EQ value
  123              | FLOPS_REQUIRED EQ value
  124              | DEADLINE EQ value
  125              | MEM_REQUIRED EQ value
  126              | AFFINITY EQ argument
  127              | argument
  128              | %empty

  129 cluster_parameter: PROCESSORS EQ argument
  130                  | TOPOLOGY EQ value
  131                  | LINK_BANDWIDTH EQ value
  132                  | LINK_CAPACITY EQ value
  133                  | NAME EQ value
  134                  | argument
  135                  | %empty

  136 scheduler_parameter: CLUSTER EQ value
  137                    | JOB_ARRAY EQ argument
  138                    | PROCESSOR_ARRAY EQ argument
  139                    | argument
  140                    | %empty

  141 function: IS_RUNNING LP func_arg_list rp
  142         | SUBMIT_JOBS LP func_arg_list rp
  143         | GET_CLOCK_SPEED LP func_arg_list rp
  144         | GET_AVAILABLE_MEMORY LP func_arg_list rp
  145         | GET_MEMORY LP func_arg_list rp
  146         | GET_LOAD LP func_arg_list rp
  147         | MAX_JOBS LP func_arg_list rp

  148 func_arg_list: argument I
  149              | %empty

  150 I: COMMA func_arg_list
  151  | %empty

  152 value: SQUOTE id_arr SQUOTE
  153      | DQUOTE id_arr DQUOTE
  154      | arithexpr
  155      | constructor

  156 semi: SEMI
  157     | error

  158 rp: RP
  159   | error

  160 rsp: RSP
  161    | error


Terminals, with rules where they appear

$end (0) 0
error (256) 157 159 161
IF (258) 4
ELSE (259) 22
WHILE (260) 5
FOR (261) 6
SWITCH (262) 7
CASE (263) 33
DEFAULT (264) 34
LP (265) 4 5 6 7 21 33 37 38 39 40 41 71 72 73 74 75 76 77 141 142
    143 144 145 146 147
RP (266) 158
LCP (267) 4 5 6 21 22 33 34
RCP (268) 4 5 6 21 22 33 34
LSP (269) 19 20 105
RSP (270) 19 20 160
SEMI (271) 156
COLON (272)
LT (273) 27 31
GT (274) 28 30
EQ (275) 15 30 31 44 48 96 97 98 99 100 101 110 111 112 113 114 117
    118 119 122 123 124 125 126 129 130 131 132 133 136 137 138
PLUS (276) 59
MINUS (277) 60
MULTIPLY (278) 62
DIVIDE (279) 63
BITOR (280) 57
BITAND (281) 55
NOT (282) 65
ID (283) 17 18
NUM (284) 19 20 67
DOT (285) 68 69
COMMA (286) 16 79 82 85 88 91 94 108 150
PROCESSOR (287) 72
LINK (288) 73
MEMORY (289) 74
JOB (290) 75
CLUSTER (291) 76 136
ISA (292) 97
CLOCK_SPEED (293) 98
L1_MEMORY (294) 99
L2_MEMORY (295) 100
NAME (296) 101 114 119 133
START_POINT (297) 110
END_POINT (298) 111
BANDWIDTH (299) 112
CHANNEL_CAPACITY (300) 113
MEMORY_TYPE (301) 117
MEM_SIZE (302) 118
JOB_ID (303) 122
FLOPS_REQUIRED (304) 123
DEADLINE (305) 124
MEM_REQUIRED (306) 125
PROCESSORS (307) 129
TOPOLOGY (308) 130
LINK_BANDWIDTH (309) 131
LINK_CAPACITY (310) 132
IS_RUNNING (311) 141
SUBMIT_JOBS (312) 142
OR (313) 24
AND (314) 25
PLUSEQ (315) 49
MINUSEQ (316) 50
MULTIPLYEQ (317) 51
DIVIDEEQ (318) 52
MINUSMINUS (319) 53
PLUSPLUS (320) 54
GET_CLOCK_SPEED (321) 143
RUN (322) 37
DISCARD_JOB (323) 40
GET_AVAILABLE_MEMORY (324) 144
GET_MEMORY (325) 145
ELSEIF (326) 21
AFFINITY (327) 126
EQEQ (328) 29
DQUOTE (329) 153
SQUOTE (330) 152
ARCHITECTURE_TYPE (331) 96
WAIT (332) 41
SCHEDULER (333) 77
JOB_ARRAY (334) 137
PROCESSOR_ARRAY (335) 138
SET_JOB_AFFINITY (336) 38
MAX_JOBS (337) 147
GET_LOAD (338) 146
SET_ALGO (339) 39
INT (340) 11
FLOAT (341) 13
CHAR (342) 12
INTEGER_LITERAL (343)


Nonterminals, with rules where they appear

$accept (89)
    on left: 0
grammar_start (90)
    on left: 1, on right: 0
stmtlist (91)
    on left: 2 3, on right: 1 2 4 5 6 21 22 33 34
stmt (92)
    on left: 4 5 6 7 8 9, on right: 2
d (93)
    on left: 10, on right: 9
type (94)
    on left: 11 12 13, on right: 10
list_var (95)
    on left: 14 15 16, on right: 10 16
id_arr (96)
    on left: 17 18, on right: 14 15 16 44 48 49 50 51 52 53 54 68 70
    152 153
br_dimlist (97)
    on left: 19 20, on right: 18 20
elsestmt (98)
    on left: 21 22 23, on right: 4 21
exprc (99)
    on left: 24 25 26, on right: 4 5 21 24 25 36
A (100)
    on left: 27 28 29 30 31 32, on right: 24 25 26
switchstmt (101)
    on left: 33 34 35, on right: 7 33
exprfor (102)
    on left: 36, on right: 6
expression (103)
    on left: 37 38 39 40 41 42 43, on right: 8 24 25 26 27 28 29 30
    31 36
init (104)
    on left: 44 45, on right: 42
mathexpr (105)
    on left: 46 47, on right: 15 43 48 49 50 51 52
assignexpr (106)
    on left: 48 49 50 51 52 53 54, on right: 46
arithexpr (107)
    on left: 55 56, on right: 7 33 47 55 71 154
expr1 (108)
    on left: 57 58, on right: 55 56 57
expr2 (109)
    on left: 59 60 61, on right: 57 58 59 60
expr3 (110)
    on left: 62 63 64, on right: 59 60 61 62 63
expr4 (111)
    on left: 65 66, on right: 62 63 64
factor (112)
    on left: 67 68 69 70 71, on right: 65 66
constructor (113)
    on left: 72 73 74 75 76 77, on right: 44 69 155
proc_parameter_list (114)
    on left: 78, on right: 72 79
C (115)
    on left: 79 80, on right: 78
link_parameter_list (116)
    on left: 81, on right: 73 82
D (117)
    on left: 82 83, on right: 81
memory_parameter_list (118)
    on left: 84, on right: 74 85
E (119)
    on left: 85 86, on right: 84
job_parameter_list (120)
    on left: 87, on right: 75 88
F (121)
    on left: 88 89, on right: 87
cluster_parameter_list (122)
    on left: 90, on right: 76 91
G (123)
    on left: 91 92, on right: 90
scheduler_parameter_list (124)
    on left: 93, on right: 77 94
Z (125)
    on left: 94 95, on right: 93
proc_parameter (126)
    on left: 96 97 98 99 100 101 102 103, on right: 78
argument (127)
    on left: 104 105, on right: 102 126 127 129 134 137 138 139 148
valuearray (128)
    on left: 106 107, on right: 105 108
H (129)
    on left: 108 109, on right: 106
link_parameter (130)
    on left: 110 111 112 113 114 115 116, on right: 81
memory_parameter (131)
    on left: 117 118 119 120 121, on right: 84
job_parameter (132)
    on left: 122 123 124 125 126 127 128, on right: 87
cluster_parameter (133)
    on left: 129 130 131 132 133 134 135, on right: 90
scheduler_parameter (134)
    on left: 136 137 138 139 140, on right: 93
function (135)
    on left: 141 142 143 144 145 146 147, on right: 68 69
func_arg_list (136)
    on left: 148 149, on right: 37 38 39 40 41 141 142 143 144 145
    146 147 150
I (137)
    on left: 150 151, on right: 148
value (138)
    on left: 152 153 154 155, on right: 96 97 98 99 100 101 104 106
    110 111 112 113 114 115 117 118 119 120 122 123 124 125 130 131
    132 133 136
semi (139)
    on left: 156 157, on right: 8 9 36
rp (140)
    on left: 158 159, on right: 4 5 6 7 21 33 37 38 39 40 41 71 72
    73 74 75 76 77 141 142 143 144 145 146 147
rsp (141)
    on left: 160 161, on right: 105


State 0

    0 $accept: . grammar_start $end

    IF                shift, and go to state 1
    WHILE             shift, and go to state 2
    FOR               shift, and go to state 3
    SWITCH            shift, and go to state 4
    LP                shift, and go to state 5
    NOT               shift, and go to state 6
    ID                shift, and go to state 7
    NUM               shift, and go to state 8
    PROCESSOR         shift, and go to state 9
    LINK              shift, and go to state 10
    MEMORY            shift, and go to state 11
    JOB               shift, and go to state 12
    CLUSTER           shift, and go to state 13
    RUN               shift, and go to state 14
    DISCARD_JOB       shift, and go to state 15
    WAIT              shift, and go to state 16
    SCHEDULER         shift, and go to state 17
    SET_JOB_AFFINITY  shift, and go to state 18
    SET_ALGO          shift, and go to state 19
    INT               shift, and go to state 20
    FLOAT             shift, and go to state 21
    CHAR              shift, and go to state 22

    $end      reduce using rule 3 (stmtlist)
    $default  reduce using rule 45 (init)

    grammar_start  go to state 23
    stmtlist       go to state 24
    stmt           go to state 25
    d              go to state 26
    type           go to state 27
    id_arr         go to state 28
    expression     go to state 29
    init           go to state 30
    mathexpr       go to state 31
    assignexpr     go to state 32
    arithexpr      go to state 33
    expr1          go to state 34
    expr2          go to state 35
    expr3          go to state 36
    expr4          go to state 37
    factor         go to state 38
    constructor    go to state 39


State 1

    4 stmt: IF . LP exprc rp LCP stmtlist RCP elsestmt

    LP  shift, and go to state 40


State 2

    5 stmt: WHILE . LP exprc rp LCP stmtlist RCP

    LP  shift, and go to state 41


State 3

    6 stmt: FOR . LP exprfor rp LCP stmtlist RCP

    LP  shift, and go to state 42


State 4

    7 stmt: SWITCH . LP arithexpr rp switchstmt

    LP  shift, and go to state 43


State 5

   71 factor: LP . arithexpr rp

    LP         shift, and go to state 5
    NOT        shift, and go to state 6
    ID         shift, and go to state 7
    NUM        shift, and go to state 8
    PROCESSOR  shift, and go to state 9
    LINK       shift, and go to state 10
    MEMORY     shift, and go to state 11
    JOB        shift, and go to state 12
    CLUSTER    shift, and go to state 13
    SCHEDULER  shift, and go to state 17

    id_arr       go to state 44
    arithexpr    go to state 45
    expr1        go to state 34
    expr2        go to state 35
    expr3        go to state 36
    expr4        go to state 37
    factor       go to state 38
    constructor  go to state 39


State 6

   65 expr4: NOT . factor

    LP         shift, and go to state 5
    ID         shift, and go to state 7
    NUM        shift, and go to state 8
    PROCESSOR  shift, and go to state 9
    LINK       shift, and go to state 10
    MEMORY     shift, and go to state 11
    JOB        shift, and go to state 12
    CLUSTER    shift, and go to state 13
    SCHEDULER  shift, and go to state 17

    id_arr       go to state 44
    factor       go to state 46
    constructor  go to state 39


State 7

   17 id_arr: ID .
   18       | ID . br_dimlist

    LSP  shift, and go to state 47

    $default  reduce using rule 17 (id_arr)

    br_dimlist  go to state 48


State 8

   67 factor: NUM .

    $default  reduce using rule 67 (factor)


State 9

   72 constructor: PROCESSOR . LP proc_parameter_list rp

    LP  shift, and go to state 49


State 10

   73 constructor: LINK . LP link_parameter_list rp

    LP  shift, and go to state 50


State 11

   74 constructor: MEMORY . LP memory_parameter_list rp

    LP  shift, and go to state 51


State 12

   75 constructor: JOB . LP job_parameter_list rp

    LP  shift, and go to state 52


State 13

   76 constructor: CLUSTER . LP cluster_parameter_list rp

    LP  shift, and go to state 53


State 14

   37 expression: RUN . LP func_arg_list rp

    LP  shift, and go to state 54


State 15

   40 expression: DISCARD_JOB . LP func_arg_list rp

    LP  shift, and go to state 55


State 16

   41 expression: WAIT . LP func_arg_list rp

    LP  shift, and go to state 56


State 17

   77 constructor: SCHEDULER . LP scheduler_parameter_list rp

    LP  shift, and go to state 57


State 18

   38 expression: SET_JOB_AFFINITY . LP func_arg_list rp

    LP  shift, and go to state 58


State 19

   39 expression: SET_ALGO . LP func_arg_list rp

    LP  shift, and go to state 59


State 20

   11 type: INT .

    $default  reduce using rule 11 (type)


State 21

   13 type: FLOAT .

    $default  reduce using rule 13 (type)


State 22

   12 type: CHAR .

    $default  reduce using rule 12 (type)


State 23

    0 $accept: grammar_start . $end

    $end  shift, and go to state 60


State 24

    1 grammar_start: stmtlist .

    $default  reduce using rule 1 (grammar_start)


State 25

    2 stmtlist: stmt . stmtlist

    IF                shift, and go to state 1
    WHILE             shift, and go to state 2
    FOR               shift, and go to state 3
    SWITCH            shift, and go to state 4
    LP                shift, and go to state 5
    NOT               shift, and go to state 6
    ID                shift, and go to state 7
    NUM               shift, and go to state 8
    PROCESSOR         shift, and go to state 9
    LINK              shift, and go to state 10
    MEMORY            shift, and go to state 11
    JOB               shift, and go to state 12
    CLUSTER           shift, and go to state 13
    RUN               shift, and go to state 14
    DISCARD_JOB       shift, and go to state 15
    WAIT              shift, and go to state 16
    SCHEDULER         shift, and go to state 17
    SET_JOB_AFFINITY  shift, and go to state 18
    SET_ALGO          shift, and go to state 19
    INT               shift, and go to state 20
    FLOAT             shift, and go to state 21
    CHAR              shift, and go to state 22

    error     reduce using rule 45 (init)
    SEMI      reduce using rule 45 (init)
    $default  reduce using rule 3 (stmtlist)

    stmtlist     go to state 61
    stmt         go to state 25
    d            go to state 26
    type         go to state 27
    id_arr       go to state 28
    expression   go to state 29
    init         go to state 30
    mathexpr     go to state 31
    assignexpr   go to state 32
    arithexpr    go to state 33
    expr1        go to state 34
    expr2        go to state 35
    expr3        go to state 36
    expr4        go to state 37
    factor       go to state 38
    constructor  go to state 39


State 26

    9 stmt: d . semi

    error  shift, and go to state 62
    SEMI   shift, and go to state 63

    semi  go to state 64


State 27

   10 d: type . list_var

    ID  shift, and go to state 7

    list_var  go to state 65
    id_arr    go to state 66


State 28

   44 init: id_arr . EQ constructor
   48 assignexpr: id_arr . EQ mathexpr
   49           | id_arr . PLUSEQ mathexpr
   50           | id_arr . MINUSEQ mathexpr
   51           | id_arr . MULTIPLYEQ mathexpr
   52           | id_arr . DIVIDEEQ mathexpr
   53           | id_arr . MINUSMINUS
   54           | id_arr . PLUSPLUS
   68 factor: id_arr . DOT function
   70       | id_arr .

    EQ          shift, and go to state 67
    DOT         shift, and go to state 68
    PLUSEQ      shift, and go to state 69
    MINUSEQ     shift, and go to state 70
    MULTIPLYEQ  shift, and go to state 71
    DIVIDEEQ    shift, and go to state 72
    MINUSMINUS  shift, and go to state 73
    PLUSPLUS    shift, and go to state 74

    $default  reduce using rule 70 (factor)


State 29

    8 stmt: expression . semi

    error  shift, and go to state 62
    SEMI   shift, and go to state 63

    semi  go to state 75


State 30

   42 expression: init .

    $default  reduce using rule 42 (expression)


State 31

   43 expression: mathexpr .

    $default  reduce using rule 43 (expression)


State 32

   46 mathexpr: assignexpr .

    $default  reduce using rule 46 (mathexpr)


State 33

   47 mathexpr: arithexpr .

    $default  reduce using rule 47 (mathexpr)


State 34

   55 arithexpr: expr1 . BITAND arithexpr
   56          | expr1 .

    BITAND  shift, and go to state 76

    $default  reduce using rule 56 (arithexpr)


State 35

   57 expr1: expr2 . BITOR expr1
   58      | expr2 .
   59 expr2: expr2 . PLUS expr3
   60      | expr2 . MINUS expr3

    PLUS   shift, and go to state 77
    MINUS  shift, and go to state 78
    BITOR  shift, and go to state 79

    $default  reduce using rule 58 (expr1)


State 36

   61 expr2: expr3 .
   62 expr3: expr3 . MULTIPLY expr4
   63      | expr3 . DIVIDE expr4

    MULTIPLY  shift, and go to state 80
    DIVIDE    shift, and go to state 81

    $default  reduce using rule 61 (expr2)


State 37

   64 expr3: expr4 .

    $default  reduce using rule 64 (expr3)


State 38

   66 expr4: factor .

    $default  reduce using rule 66 (expr4)


State 39

   69 factor: constructor . DOT function

    DOT  shift, and go to state 82


State 40

    4 stmt: IF LP . exprc rp LCP stmtlist RCP elsestmt

    LP                shift, and go to state 5
    NOT               shift, and go to state 6
    ID                shift, and go to state 7
    NUM               shift, and go to state 8
    PROCESSOR         shift, and go to state 9
    LINK              shift, and go to state 10
    MEMORY            shift, and go to state 11
    JOB               shift, and go to state 12
    CLUSTER           shift, and go to state 13
    RUN               shift, and go to state 14
    DISCARD_JOB       shift, and go to state 15
    WAIT              shift, and go to state 16
    SCHEDULER         shift, and go to state 17
    SET_JOB_AFFINITY  shift, and go to state 18
    SET_ALGO          shift, and go to state 19

    $default  reduce using rule 45 (init)

    id_arr       go to state 28
    exprc        go to state 83
    expression   go to state 84
    init         go to state 30
    mathexpr     go to state 31
    assignexpr   go to state 32
    arithexpr    go to state 33
    expr1        go to state 34
    expr2        go to state 35
    expr3        go to state 36
    expr4        go to state 37
    factor       go to state 38
    constructor  go to state 39


State 41

    5 stmt: WHILE LP . exprc rp LCP stmtlist RCP

    LP                shift, and go to state 5
    NOT               shift, and go to state 6
    ID                shift, and go to state 7
    NUM               shift, and go to state 8
    PROCESSOR         shift, and go to state 9
    LINK              shift, and go to state 10
    MEMORY            shift, and go to state 11
    JOB               shift, and go to state 12
    CLUSTER           shift, and go to state 13
    RUN               shift, and go to state 14
    DISCARD_JOB       shift, and go to state 15
    WAIT              shift, and go to state 16
    SCHEDULER         shift, and go to state 17
    SET_JOB_AFFINITY  shift, and go to state 18
    SET_ALGO          shift, and go to state 19

    $default  reduce using rule 45 (init)

    id_arr       go to state 28
    exprc        go to state 85
    expression   go to state 84
    init         go to state 30
    mathexpr     go to state 31
    assignexpr   go to state 32
    arithexpr    go to state 33
    expr1        go to state 34
    expr2        go to state 35
    expr3        go to state 36
    expr4        go to state 37
    factor       go to state 38
    constructor  go to state 39


State 42

    6 stmt: FOR LP . exprfor rp LCP stmtlist RCP

    LP                shift, and go to state 5
    NOT               shift, and go to state 6
    ID                shift, and go to state 7
    NUM               shift, and go to state 8
    PROCESSOR         shift, and go to state 9
    LINK              shift, and go to state 10
    MEMORY            shift, and go to state 11
    JOB               shift, and go to state 12
    CLUSTER           shift, and go to state 13
    RUN               shift, and go to state 14
    DISCARD_JOB       shift, and go to state 15
    WAIT              shift, and go to state 16
    SCHEDULER         shift, and go to state 17
    SET_JOB_AFFINITY  shift, and go to state 18
    SET_ALGO          shift, and go to state 19

    $default  reduce using rule 45 (init)

    id_arr       go to state 28
    exprfor      go to state 86
    expression   go to state 87
    init         go to state 30
    mathexpr     go to state 31
    assignexpr   go to state 32
    arithexpr    go to state 33
    expr1        go to state 34
    expr2        go to state 35
    expr3        go to state 36
    expr4        go to state 37
    factor       go to state 38
    constructor  go to state 39


State 43

    7 stmt: SWITCH LP . arithexpr rp switchstmt

    LP         shift, and go to state 5
    NOT        shift, and go to state 6
    ID         shift, and go to state 7
    NUM        shift, and go to state 8
    PROCESSOR  shift, and go to state 9
    LINK       shift, and go to state 10
    MEMORY     shift, and go to state 11
    JOB        shift, and go to state 12
    CLUSTER    shift, and go to state 13
    SCHEDULER  shift, and go to state 17

    id_arr       go to state 44
    arithexpr    go to state 88
    expr1        go to state 34
    expr2        go to state 35
    expr3        go to state 36
    expr4        go to state 37
    factor       go to state 38
    constructor  go to state 39


State 44

   68 factor: id_arr . DOT function
   70       | id_arr .

    DOT  shift, and go to state 68

    $default  reduce using rule 70 (factor)


State 45

   71 factor: LP arithexpr . rp

    error  shift, and go to state 89
    RP     shift, and go to state 90

    rp  go to state 91


State 46

   65 expr4: NOT factor .

    $default  reduce using rule 65 (expr4)


State 47

   19 br_dimlist: LSP . NUM RSP

    NUM  shift, and go to state 92


State 48

   18 id_arr: ID br_dimlist .
   20 br_dimlist: br_dimlist . LSP NUM RSP

    LSP  shift, and go to state 93

    $default  reduce using rule 18 (id_arr)


State 49

   72 constructor: PROCESSOR LP . proc_parameter_list rp

    LP                 shift, and go to state 5
    LSP                shift, and go to state 94
    NOT                shift, and go to state 6
    ID                 shift, and go to state 7
    NUM                shift, and go to state 8
    PROCESSOR          shift, and go to state 9
    LINK               shift, and go to state 10
    MEMORY             shift, and go to state 11
    JOB                shift, and go to state 12
    CLUSTER            shift, and go to state 13
    ISA                shift, and go to state 95
    CLOCK_SPEED        shift, and go to state 96
    L1_MEMORY          shift, and go to state 97
    L2_MEMORY          shift, and go to state 98
    NAME               shift, and go to state 99
    DQUOTE             shift, and go to state 100
    SQUOTE             shift, and go to state 101
    ARCHITECTURE_TYPE  shift, and go to state 102
    SCHEDULER          shift, and go to state 17

    $default  reduce using rule 103 (proc_parameter)

    id_arr               go to state 44
    arithexpr            go to state 103
    expr1                go to state 34
    expr2                go to state 35
    expr3                go to state 36
    expr4                go to state 37
    factor               go to state 38
    constructor          go to state 104
    proc_parameter_list  go to state 105
    proc_parameter       go to state 106
    argument             go to state 107
    value                go to state 108


State 50

   73 constructor: LINK LP . link_parameter_list rp

    LP                shift, and go to state 5
    NOT               shift, and go to state 6
    ID                shift, and go to state 7
    NUM               shift, and go to state 8
    PROCESSOR         shift, and go to state 9
    LINK              shift, and go to state 10
    MEMORY            shift, and go to state 11
    JOB               shift, and go to state 12
    CLUSTER           shift, and go to state 13
    NAME              shift, and go to state 109
    START_POINT       shift, and go to state 110
    END_POINT         shift, and go to state 111
    BANDWIDTH         shift, and go to state 112
    CHANNEL_CAPACITY  shift, and go to state 113
    DQUOTE            shift, and go to state 100
    SQUOTE            shift, and go to state 101
    SCHEDULER         shift, and go to state 17

    $default  reduce using rule 116 (link_parameter)

    id_arr               go to state 44
    arithexpr            go to state 103
    expr1                go to state 34
    expr2                go to state 35
    expr3                go to state 36
    expr4                go to state 37
    factor               go to state 38
    constructor          go to state 104
    link_parameter_list  go to state 114
    link_parameter       go to state 115
    value                go to state 116


State 51

   74 constructor: MEMORY LP . memory_parameter_list rp

    LP           shift, and go to state 5
    NOT          shift, and go to state 6
    ID           shift, and go to state 7
    NUM          shift, and go to state 8
    PROCESSOR    shift, and go to state 9
    LINK         shift, and go to state 10
    MEMORY       shift, and go to state 11
    JOB          shift, and go to state 12
    CLUSTER      shift, and go to state 13
    NAME         shift, and go to state 117
    MEMORY_TYPE  shift, and go to state 118
    MEM_SIZE     shift, and go to state 119
    DQUOTE       shift, and go to state 100
    SQUOTE       shift, and go to state 101
    SCHEDULER    shift, and go to state 17

    $default  reduce using rule 121 (memory_parameter)

    id_arr                 go to state 44
    arithexpr              go to state 103
    expr1                  go to state 34
    expr2                  go to state 35
    expr3                  go to state 36
    expr4                  go to state 37
    factor                 go to state 38
    constructor            go to state 104
    memory_parameter_list  go to state 120
    memory_parameter       go to state 121
    value                  go to state 122


State 52

   75 constructor: JOB LP . job_parameter_list rp

    LP              shift, and go to state 5
    LSP             shift, and go to state 94
    NOT             shift, and go to state 6
    ID              shift, and go to state 7
    NUM             shift, and go to state 8
    PROCESSOR       shift, and go to state 9
    LINK            shift, and go to state 10
    MEMORY          shift, and go to state 11
    JOB             shift, and go to state 12
    CLUSTER         shift, and go to state 13
    JOB_ID          shift, and go to state 123
    FLOPS_REQUIRED  shift, and go to state 124
    DEADLINE        shift, and go to state 125
    MEM_REQUIRED    shift, and go to state 126
    AFFINITY        shift, and go to state 127
    DQUOTE          shift, and go to state 100
    SQUOTE          shift, and go to state 101
    SCHEDULER       shift, and go to state 17

    $default  reduce using rule 128 (job_parameter)

    id_arr              go to state 44
    arithexpr           go to state 103
    expr1               go to state 34
    expr2               go to state 35
    expr3               go to state 36
    expr4               go to state 37
    factor              go to state 38
    constructor         go to state 104
    job_parameter_list  go to state 128
    argument            go to state 129
    job_parameter       go to state 130
    value               go to state 108


State 53

   76 constructor: CLUSTER LP . cluster_parameter_list rp

    LP              shift, and go to state 5
    LSP             shift, and go to state 94
    NOT             shift, and go to state 6
    ID              shift, and go to state 7
    NUM             shift, and go to state 8
    PROCESSOR       shift, and go to state 9
    LINK            shift, and go to state 10
    MEMORY          shift, and go to state 11
    JOB             shift, and go to state 12
    CLUSTER         shift, and go to state 13
    NAME            shift, and go to state 131
    PROCESSORS      shift, and go to state 132
    TOPOLOGY        shift, and go to state 133
    LINK_BANDWIDTH  shift, and go to state 134
    LINK_CAPACITY   shift, and go to state 135
    DQUOTE          shift, and go to state 100
    SQUOTE          shift, and go to state 101
    SCHEDULER       shift, and go to state 17

    $default  reduce using rule 135 (cluster_parameter)

    id_arr                  go to state 44
    arithexpr               go to state 103
    expr1                   go to state 34
    expr2                   go to state 35
    expr3                   go to state 36
    expr4                   go to state 37
    factor                  go to state 38
    constructor             go to state 104
    cluster_parameter_list  go to state 136
    argument                go to state 137
    cluster_parameter       go to state 138
    value                   go to state 108


State 54

   37 expression: RUN LP . func_arg_list rp

    LP         shift, and go to state 5
    LSP        shift, and go to state 94
    NOT        shift, and go to state 6
    ID         shift, and go to state 7
    NUM        shift, and go to state 8
    PROCESSOR  shift, and go to state 9
    LINK       shift, and go to state 10
    MEMORY     shift, and go to state 11
    JOB        shift, and go to state 12
    CLUSTER    shift, and go to state 13
    DQUOTE     shift, and go to state 100
    SQUOTE     shift, and go to state 101
    SCHEDULER  shift, and go to state 17

    $default  reduce using rule 149 (func_arg_list)

    id_arr         go to state 44
    arithexpr      go to state 103
    expr1          go to state 34
    expr2          go to state 35
    expr3          go to state 36
    expr4          go to state 37
    factor         go to state 38
    constructor    go to state 104
    argument       go to state 139
    func_arg_list  go to state 140
    value          go to state 108


State 55

   40 expression: DISCARD_JOB LP . func_arg_list rp

    LP         shift, and go to state 5
    LSP        shift, and go to state 94
    NOT        shift, and go to state 6
    ID         shift, and go to state 7
    NUM        shift, and go to state 8
    PROCESSOR  shift, and go to state 9
    LINK       shift, and go to state 10
    MEMORY     shift, and go to state 11
    JOB        shift, and go to state 12
    CLUSTER    shift, and go to state 13
    DQUOTE     shift, and go to state 100
    SQUOTE     shift, and go to state 101
    SCHEDULER  shift, and go to state 17

    $default  reduce using rule 149 (func_arg_list)

    id_arr         go to state 44
    arithexpr      go to state 103
    expr1          go to state 34
    expr2          go to state 35
    expr3          go to state 36
    expr4          go to state 37
    factor         go to state 38
    constructor    go to state 104
    argument       go to state 139
    func_arg_list  go to state 141
    value          go to state 108


State 56

   41 expression: WAIT LP . func_arg_list rp

    LP         shift, and go to state 5
    LSP        shift, and go to state 94
    NOT        shift, and go to state 6
    ID         shift, and go to state 7
    NUM        shift, and go to state 8
    PROCESSOR  shift, and go to state 9
    LINK       shift, and go to state 10
    MEMORY     shift, and go to state 11
    JOB        shift, and go to state 12
    CLUSTER    shift, and go to state 13
    DQUOTE     shift, and go to state 100
    SQUOTE     shift, and go to state 101
    SCHEDULER  shift, and go to state 17

    $default  reduce using rule 149 (func_arg_list)

    id_arr         go to state 44
    arithexpr      go to state 103
    expr1          go to state 34
    expr2          go to state 35
    expr3          go to state 36
    expr4          go to state 37
    factor         go to state 38
    constructor    go to state 104
    argument       go to state 139
    func_arg_list  go to state 142
    value          go to state 108


State 57

   77 constructor: SCHEDULER LP . scheduler_parameter_list rp
